[project]
name = "dl_light_infra"
version = "0.0.0"
authors = [
  { name="Frank Ypma", email="frank.ypma@ypma-data.nl" },
]
description = "CDK Framework for AWS datalake"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fhcypma/dl-light-infra"

[tool.setuptools]
packages = ["dl_light_infra"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"